<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.exit.ExitDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/tvExitTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/lblExitTelegramPlayerTitle"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x32sp"
            app:layout_constraintBottom_toTopOf="@+id/tvExitMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvExitMessage"
            isMMFont="@{true}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/x16dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/lblExitTelegramPlayerMessage"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x17sp"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExitTitle" />

        <Button
            android:id="@+id/btnCancel"
            isMMFont="@{true}"
            android:layout_width="@dimen/x250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x16dp"
            android:layout_marginBottom="@dimen/x16dp"
            android:background="@drawable/btn_telegram_txt"
            android:gravity="center"
            android:paddingVertical="@dimen/x8dp"
            android:text="@string/btnExitCancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnExit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExitMessage">

            <requestFocus />
        </Button>

        <Button
            android:id="@+id/btnExit"
            isMMFont="@{true}"
            android:layout_width="@dimen/x250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_telegram_txt"
            android:gravity="center"
            android:paddingVertical="@dimen/x8dp"
            android:text="@string/btnExitConfirm"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
