<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.qr.QRPage">

    <data>

        <import type="com.kyawhtut.atsycast.telegram.ui.auth.qr.QRViewModel" />

        <variable
            name="vm"
            type="QRViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/ivQRCode"
            android:layout_width="@dimen/x200dp"
            android:layout_height="@dimen/x200dp"
            app:layout_constraintBottom_toTopOf="@+id/tvPageTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/x16dp"
            android:text="@string/lblTelegramQRCodePageTitle"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x32sp"
            app:layout_constraintBottom_toTopOf="@+id/tvPageMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivQRCode" />

        <TextView
            android:id="@+id/tvPageMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/lblTelegramQRCodePageMessage"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnLoginWithPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPageTitle" />

        <Button
            android:id="@+id/btnLoginWithPhone"
            android:layout_width="@dimen/x360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x16dp"
            android:background="@drawable/btn_telegram_txt"
            android:onClick="@{vm::onClickLoginWithPhone}"
            android:text="@string/btnTelegramLoginByPhoneNumber"
            android:textColor="@color/colorTelegramPrimary"
            android:textSize="@dimen/x18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPageMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>