<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.photoviewer.PhotoViewScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivBlurView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/blur"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            isTv="@{true}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/x56dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/x32dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvCaption"
                isMMFont="@{true}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.3"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/x24sp"
                tools:text="@string/btnTelegramNext" />
        </ScrollView>

        <Button
            android:id="@+id/btnCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x24dp"
            android:layout_marginBottom="@dimen/x24dp"
            android:background="@drawable/btn_telegram_txt"
            android:minWidth="@dimen/x156dp"
            android:paddingHorizontal="@dimen/x24dp"
            android:text="@string/btnTelegramReadCaption"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPlay" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x24dp"
            android:layout_marginBottom="@dimen/x24dp"
            android:background="@drawable/btn_telegram_txt"
            android:minWidth="@dimen/x156dp"
            android:paddingHorizontal="@dimen/x24dp"
            android:text="@string/btnTelegramPlay"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
