<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.phone.PhonePage">

    <data>

        <import type="com.kyawhtut.atsycast.telegram.ui.auth.phone.PhoneViewModel" />

        <variable
            name="vm"
            type="PhoneViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.63" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/x175dp"
            android:layout_height="@dimen/x175dp"
            android:layout_marginTop="@dimen/x72dp"
            android:src="@drawable/ic_telegram_login"
            app:layout_constraintBottom_toTopOf="@+id/tvPageTitle"
            app:layout_constraintEnd_toStartOf="@+id/guideCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x16dp"
            android:text="@string/lblTelegramPhonePageTitle"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x32sp"
            app:layout_constraintBottom_toTopOf="@+id/tvPageMessage"
            app:layout_constraintEnd_toStartOf="@+id/guideCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <TextView
            android:id="@+id/tvPageMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x16dp"
            android:gravity="center"
            android:text="@string/lblTelegramPhonePageMessage"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnLoginWithQRCode"
            app:layout_constraintEnd_toStartOf="@+id/guideCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPageTitle" />

        <com.kyawhut.atsycast.share.components.RoundedConstraintLayout
            android:id="@+id/btnCountryCode"
            focusListener="@{(isFocus) -> vm.setFocusCountry(isFocus)}"
            isTv="@{true}"
            android:layout_width="0dp"
            android:layout_height="@dimen/x56dp"
            android:layout_marginHorizontal="@dimen/x24dp"
            android:layout_marginBottom="@dimen/x24dp"
            app:backgroundColor="@android:color/transparent"
            app:cornerAll="@dimen/x8dp"
            app:layout_constraintBottom_toTopOf="@+id/viewPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:strokeLineColor="@{vm.focusCountry ? @color/coloTelegramEdtFocus : @color/coloTelegramEdtUnFocus}"
            app:strokeLineWidth="@dimen/x1dp"
            tools:strokeLineColor="@color/coloTelegramEdtFocus">

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/x16dp"
                android:text="@string/hintTelegramCountry"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/x18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.kyawhut.atsycast.share.components.RoundedConstraintLayout>

        <TextView
            android:id="@+id/tvCountryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x16dp"
            android:background="@color/colorBackground"
            android:paddingHorizontal="@dimen/x8dp"
            android:text="@string/hintTelegramCountry"
            android:textColor="@{vm.focusCountry ? @color/coloTelegramEdtHintFocus : @color/coloTelegramEdtHintUnFocus}"
            android:textSize="@dimen/x16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnCountryCode"
            app:layout_constraintStart_toStartOf="@+id/btnCountryCode"
            app:layout_constraintTop_toTopOf="@+id/btnCountryCode" />

        <com.kyawhut.atsycast.share.components.RoundedConstraintLayout
            android:id="@+id/viewPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/x24dp"
            android:layout_marginBottom="@dimen/x16dp"
            app:backgroundColor="@android:color/transparent"
            app:cornerAll="@dimen/x8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideCenter"
            app:layout_constraintTop_toBottomOf="@+id/btnCountryCode"
            app:strokeLineColor="@{vm.focusPhone ? @color/coloTelegramEdtFocus : @color/coloTelegramEdtUnFocus}"
            app:strokeLineWidth="@dimen/x1dp"
            tools:strokeLineColor="@color/coloTelegramEdtUnFocus">

            <TextView
                android:id="@+id/tvCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x16dp"
                android:text="@{vm.country}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/x18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="+65" />

            <EditText
                android:id="@+id/edtPhone"
                actionDone="@{btnNext}"
                focusListener="@{(isFocus) -> vm.setFocusPhone(isFocus)}"
                android:layout_width="0dp"
                android:layout_height="@dimen/x56dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@{vm.focusPhone ? `` : @string/hintTelegramPhoneNumber}"
                android:inputType="phone"
                android:maxLines="1"
                android:nextFocusUp="@+id/btnCountryCode"
                android:paddingStart="@dimen/x8dp"
                android:paddingEnd="@dimen/x16dp"
                android:text="@={vm.phone}"
                android:textSize="@dimen/x18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvCountryCode"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12345">

                <requestFocus />
            </EditText>
        </com.kyawhut.atsycast.share.components.RoundedConstraintLayout>

        <TextView
            android:id="@+id/tvPhoneLabel"
            isVisible="@{!vm.emptyPhone || vm.focusPhone}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x16dp"
            android:background="@color/colorBackground"
            android:paddingHorizontal="@dimen/x8dp"
            android:text="@string/hintTelegramPhoneNumber"
            android:textColor="@{vm.focusPhone ? @color/coloTelegramEdtHintFocus : @color/coloTelegramEdtHintUnFocus}"
            android:textSize="@dimen/x16sp"
            app:layout_constraintBottom_toTopOf="@+id/viewPhone"
            app:layout_constraintStart_toStartOf="@+id/viewPhone"
            app:layout_constraintTop_toTopOf="@+id/viewPhone" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/x24dp"
            android:layout_marginBottom="@dimen/x16dp"
            android:background="@drawable/btn_telegram"
            android:onClick="@{vm::onClickNext}"
            android:text="@string/btnTelegramNext"
            android:textSize="@dimen/x18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnLoginWithQRCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideCenter"
            app:layout_constraintTop_toBottomOf="@+id/viewPhone" />

        <Button
            android:id="@+id/btnLoginWithQRCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/x24dp"
            android:background="@drawable/btn_telegram_txt"
            android:onClick="@{vm::onClickLoginWithQRCode}"
            android:text="@string/btnTelegramLoginByQRCode"
            android:textColor="@color/colorTelegramPrimary"
            android:textSize="@dimen/x18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideCenter"
            app:layout_constraintTop_toBottomOf="@+id/btnNext" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>