<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.otp.OTPPage">

    <data>

        <import type="com.kyawhtut.atsycast.telegram.ui.auth.otp.OTPViewModel" />

        <variable
            name="vm"
            type="OTPViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/tvPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.phoneNumber}"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x32sp"
            app:layout_constraintBottom_toTopOf="@+id/tvPageMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/lblTelegramOTPPageTitle" />

        <ImageView
            android:id="@+id/btnEditPhone"
            isTv="@{true}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x8dp"
            android:onClick="@{vm::onClickPhoneNumberChange}"
            android:src="@drawable/ic_telegram_phone_edit"
            app:layout_constraintBottom_toBottomOf="@+id/tvPageTitle"
            app:layout_constraintStart_toEndOf="@+id/tvPageTitle"
            app:layout_constraintTop_toTopOf="@+id/tvPageTitle" />

        <TextView
            android:id="@+id/tvPageMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/x16dp"
            android:layout_marginTop="@dimen/x16dp"
            android:gravity="center"
            android:text="@string/lblTelegramOTPPageMessage"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x20sp"
            app:layout_constraintBottom_toTopOf="@+id/viewCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPageTitle" />

        <com.kyawhut.atsycast.share.components.RoundedConstraintLayout
            android:id="@+id/viewCode"
            android:layout_width="@dimen/x360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x8dp"
            app:backgroundColor="@android:color/transparent"
            app:cornerAll="@dimen/x8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPageMessage"
            app:strokeLineColor="@{vm.focus ? @color/coloTelegramEdtFocus : @color/coloTelegramEdtUnFocus}"
            app:strokeLineWidth="@dimen/x1dp"
            tools:strokeLineColor="@color/coloTelegramEdtFocus">

            <EditText
                android:id="@+id/edtCode"
                focusListener="@{(isFocus) -> vm.setFocus(isFocus)}"
                android:layout_width="0dp"
                android:layout_height="@dimen/x56dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@{vm.focus ? `` : @string/hintTelegramCode}"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/x16dp"
                android:text="@={vm.code}"
                android:textSize="@dimen/x18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12345">

                <requestFocus />
            </EditText>
        </com.kyawhut.atsycast.share.components.RoundedConstraintLayout>

        <TextView
            android:id="@+id/tvCodeLabel"
            isVisible="@{!vm.emptyCode || vm.focus}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x16dp"
            android:background="@color/colorBackground"
            android:paddingHorizontal="@dimen/x8dp"
            android:text="@string/hintTelegramCode"
            android:textColor="@{vm.focus ? @color/coloTelegramEdtHintFocus : @color/coloTelegramEdtHintUnFocus}"
            android:textSize="@dimen/x16sp"
            app:layout_constraintBottom_toTopOf="@+id/viewCode"
            app:layout_constraintStart_toStartOf="@+id/viewCode"
            app:layout_constraintTop_toTopOf="@+id/viewCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>